Fixed nav bar overlapping with images by adding fixed position

--- a/css/master.css
+++ b/css/master.css
@@ -2,25 +2,37 @@ html,
 body {
   max-width: 100%;
   overflow-x: hidden;
+  background-image: url(../images/pizza.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #f3f3f3;
 }
 
 .gray-bg {
   background: #f3f3f3;
 }
 
+header {
+  max-width: auto;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+}
+
 .topnav {
-  background-color: #f3f3f3;
+  background-color: #030303;
   overflow: hidden;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #000000;
+  color: #ffffff;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 18px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .topnav a:hover {
@@ -49,7 +61,7 @@ body {
   top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #000000;
+  color: #ffffff;
   font-weight: 500;
   text-align: center;
 }
@@ -57,13 +69,15 @@ body {
 .ptype {
   width: 250px;
   height: 250px;
-  position: relative;
   float: left;
   margin-right: 50px;
 }
 
 .contact-pic {
-  background-image: url(../images/appetite-1239428_960_720.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  color: #030303;
+}
+
+.container {
+  background-color: darkgray;
+
 }
